// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleMenuViewHyperlink Collapsible Menu Context should render a menu item 1`] = `
<MenuItem
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isDisabled={false}
  isHighlighted={false}
  isInstructionsForUse={false}
  isToggled={false}
  onClick={[Function]}
  subMenuItems={[]}
  text="Testing"
/>
`;

exports[`CollapsibleMenuViewHyperlink should render a default component 1`] = `
<div
  className="face-up-item"
>
  <InjectIntl(Hyperlink)
    href="https://www.oracle.com/"
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    text="Testing"
    variant="default"
  />
</div>
`;
